[metadata]
name = xcdf
version = 4.0.0
description = Python bindings for the eXplicitly Compacted Data Format (XCDF) built using pybind11
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
project_urls=
    Bug Tracker = https://github.com/jimbraun/XCDF/issues
    Source Code = https://github.com/jimbraun/XCDF

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
	Topic :: Scientific/Engineering :: Astronomy
    Intended Audience :: Science/Research
    Topic :: Software Development :: Libraries :: Python Modules



[options]
install_requires =
    numpy
python_requires = >=3.7

[options.extras_require]
tests = 
    pytest
docs =
    breathe
    exhale
    furo
    graphviz
    sphinx
    sphinx-copybutton
    sphinx-automodapi
    sphinx-exec-code